--- a/solution/GOAP.vcxproj
+++ b/solution/GOAP.vcxproj
@@ -17,12 +17,14 @@
     <ClCompile Include="..\src\TaskCallback.cpp" />
     <ClCompile Include="..\src\TaskDeadLock.cpp" />
     <ClCompile Include="..\src\TaskDummy.cpp" />
+    <ClCompile Include="..\src\TaskFork.cpp" />
     <ClCompile Include="..\src\TaskFunction.cpp" />
     <ClCompile Include="..\src\TaskIf.cpp" />
     <ClCompile Include="..\src\TaskParallelNeck.cpp" />
     <ClCompile Include="..\src\TaskRaceNeck.cpp" />
     <ClCompile Include="..\src\TaskRepeat.cpp" />
     <ClCompile Include="..\src\TaskScope.cpp" />
+    <ClCompile Include="..\src\TaskSwitch.cpp" />
     <ClCompile Include="..\src\TranscriptorBase.cpp" />
     <ClCompile Include="..\src\TranscriptorParallel.cpp" />
     <ClCompile Include="..\src\TranscriptorRace.cpp" />
@@ -37,14 +39,17 @@
     <ClInclude Include="..\include\GOAP\IntrusivePtrBase.h" />
     <ClInclude Include="..\include\GOAP\ScopeProvider.h" />
     <ClInclude Include="..\include\GOAP\Source.h" />
+    <ClInclude Include="..\include\GOAP\SwitchProvider.h" />
     <ClInclude Include="..\include\GOAP\Task.h" />
     <ClInclude Include="..\include\GOAP\TaskCallback.h" />
     <ClInclude Include="..\include\GOAP\TaskDeadLock.h" />
     <ClInclude Include="..\include\GOAP\TaskDummy.h" />
+    <ClInclude Include="..\include\GOAP\TaskFork.h" />
     <ClInclude Include="..\include\GOAP\TaskFunction.h" />
     <ClInclude Include="..\include\GOAP\TaskIf.h" />
     <ClInclude Include="..\include\GOAP\TaskRepeat.h" />
     <ClInclude Include="..\include\GOAP\TaskScope.h" />
+    <ClInclude Include="..\include\GOAP\TaskSwitch.h" />
     <ClInclude Include="..\src\TaskParallelNeck.h" />
     <ClInclude Include="..\src\TaskRaceNeck.h" />
     <ClInclude Include="..\src\Transcriptor.h" />
