--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,13 @@
 PROJECT(GOAP)
 
+OPTION(LIBGOAP_EXTERNAL_BUILD "LIBGOAP_EXTERNAL_BUILD" OFF)
+
+IF( NOT LIBGOAP_EXTERNAL_BUILD )
+    SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build_temp/${ENGINE_LIB_DIR} )
+    SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/libGOAP_win32 )
+    SET( CMAKE_TEMP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CMakeTemp/libGOAP_win32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )
+ENDIF()
+
 SET( SOURCE_DIR src )
 SET( INCLUDE_DIR include/GOAP )
 
