rework Config.h add Factorable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 PROJECT(GOAP)
 
 OPTION(LIBGOAP_EXTERNAL_BUILD "LIBGOAP_EXTERNAL_BUILD" OFF)
+OPTION(LIBGOAP_EXTERNAL_INCLUDE "LIBGOAP_EXTERNAL_INCLUDE" OFF)
+OPTION(LIBGOAP_EXTERNAL_INCLUDE_PATH "LIBGOAP_EXTERNAL_INCLUDE_PATH" "")
 
 IF( NOT LIBGOAP_EXTERNAL_BUILD )
     SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build_temp/${ENGINE_LIB_DIR} )
     SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/libGOAP_win32 )
-    SET( CMAKE_TEMP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CMakeTemp/libGOAP_win32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )
+    SET( CMAKE_TEMP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CMakeTemp/libGOAP_win32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )    
 ENDIF()
 
 SET( SOURCE_DIR src )
@@ -33,6 +35,7 @@ ${SOURCE_DIR}/TranscriptorParallel.cpp
 ${SOURCE_DIR}/TranscriptorRace.cpp
 ${SOURCE_DIR}/Alias.cpp
 ${SOURCE_DIR}/Exception.cpp
+${SOURCE_DIR}/Factorable.cpp
 
 ${INCLUDE_DIR}/TaskSwitch.h
 ${INCLUDE_DIR}/TaskRepeat.h
@@ -62,6 +65,10 @@ ${INCLUDE_DIR}/Exception.h
 ${INCLUDE_DIR}/Config.h
 ${INCLUDE_DIR}/Factorable
 )
+
+IF( LIBGOAP_EXTERNAL_INCLUDE )
+    include_directories(${PROJECT_NAME} ${LIBGOAP_EXTERNAL_INCLUDE_PATH})
+ENDIF()
 
 include_directories(${PROJECT_NAME} include)
 
