--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ OPTION(LIBGOAP_EXTERNAL_INCLUDE_PATH "LIBGOAP_EXTERNAL_INCLUDE_PATH" "")
 OPTION(LIBGOAP_SANDBOX "LIBGOAP_SANDBOX" OFF)
 
 IF( NOT LIBGOAP_EXTERNAL_BUILD )
+    set (CMAKE_CXX_STANDARD 11)
+    
     SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build_temp/${ENGINE_LIB_DIR} )
     SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/libGOAP_win32 )
     SET( CMAKE_TEMP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CMakeTemp/libGOAP_win32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )       
