--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ PROJECT(GOAP)
 OPTION(LIBGOAP_EXTERNAL_BUILD "LIBGOAP_EXTERNAL_BUILD" OFF)
 OPTION(LIBGOAP_EXTERNAL_INCLUDE "LIBGOAP_EXTERNAL_INCLUDE" OFF)
 OPTION(LIBGOAP_EXTERNAL_INCLUDE_PATH "LIBGOAP_EXTERNAL_INCLUDE_PATH" "")
+OPTION(LIBGOAP_INSTALL "LIBGOAP_INSTALL" OFF )
 OPTION(LIBGOAP_BUILD_TEST "LIBGOAP_BUILD_TEST" ON)
 
 IF( NOT LIBGOAP_EXTERNAL_BUILD )
@@ -108,6 +109,15 @@ ENDIF()
 include_directories(${PROJECT_NAME} ${INCLUDE_DIR})
 
 add_library( ${PROJECT_NAME} STATIC ${GOAP_SOURCES} ${GOAP_HEADERS} )
+
+if(LIBGOAP_INSTALL)
+    install(DIRECTORY include
+        DESTINATION .
+        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
+
+    install(TARGETS ${PROJECT_NAME}            
+        ARCHIVE DESTINATION lib)
+endif()
 
 if( LIBGOAP_BUILD_TEST )
     SET( SANDBOX_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sandbox )
