--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,15 @@ os:
 compiler:
     - gcc
     - clang
+    
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test  
+    packages:
+      - gcc-7
+      - g++-7
+      - cmake    
 
 env:
     - TARGET_CPU=amd64 BUILD_CONFIGURATION=Debug
@@ -19,7 +28,6 @@ env:
 
 matrix:
     exclude:
-        # вручную исключим ненужные элементы из матрицы сборки:
         - os:       osx
           compiler: gcc
 
@@ -30,9 +38,11 @@ matrix:
           env: TARGET_CPU=x86 BUILD_CONFIGURATION=Release
 
 script:
-    # скрипт сборки и тестирования проекта:
+    # Export CC and CXX to tell cmake which compiler to use
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CC=/usr/bin/gcc-7 && export CXX=/usr/bin/g++-7 && gcc -v && g++ -v && cmake --version; fi
+    # run
     - mkdir build_cmake
     - cd build_cmake
     - cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DTARGET_CPU=$TARGET_CPU
-    - cmake --build .
+    - cmake --build . --config $BUILD_CONFIGURATION
     - ctest --output-on-failure
