--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,22 @@
 version: '{build}'
 
+branches:
+  only:
+  - master
+
+image:
+- Visual Studio 2017
+
+configuration:
+- Debug
+- Release
+
 environment:
+  TOOLSET: v141
+  ToolsVersion: 15.0
+  VCVARSALL: '%ProgramFiles(x86)%\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat'
+
   matrix:
-  # Comilers matrix
   - env_cmake_generator: "Visual Studio 15 2017"
     env_cmake_configuration: Debug
   - env_cmake_generator: "Visual Studio 15 2017"
