--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,16 @@ PROJECT(GOAP)
 
 OPTION(LIBGOAP_EXTERNAL_BUILD "LIBGOAP_EXTERNAL_BUILD" OFF)
 OPTION(LIBGOAP_EXTERNAL_CONFIG_INCLUDE "LIBGOAP_EXTERNAL_CONFIG_INCLUDE" OFF)
-OPTION(LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH "LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH" "")
 OPTION(LIBGOAP_INSTALL "LIBGOAP_INSTALL" OFF )
 OPTION(LIBGOAP_BUILD_TEST "LIBGOAP_BUILD_TEST" ON)
+
+SET(LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH "" CACHE STRING "LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH")
+
+MESSAGE("LIBGOAP_EXTERNAL_BUILD: ${LIBGOAP_EXTERNAL_BUILD}")
+MESSAGE("LIBGOAP_EXTERNAL_CONFIG_INCLUDE: ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE}")
+MESSAGE("LIBGOAP_INSTALL: ${LIBGOAP_INSTALL}")
+MESSAGE("LIBGOAP_BUILD_TEST: ${LIBGOAP_BUILD_TEST}")
+MESSAGE("LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH: ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH}")
 
 IF(NOT LIBGOAP_EXTERNAL_BUILD)
     set (CMAKE_CXX_STANDARD 17)
@@ -14,6 +21,8 @@ IF(NOT LIBGOAP_EXTERNAL_BUILD)
     SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_GENERATOR})
     SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR})
 ENDIF()
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -108,10 +117,10 @@ set( GOAP_HEADERS
 )
 
 IF(LIBGOAP_EXTERNAL_CONFIG_INCLUDE)
-    MESSAGE("LIBGOAP_EXTERNAL_CONFIG_INCLUDE = ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH}")
     include_directories(${PROJECT_NAME} ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH})
 ELSE()
     set( GOAP_HEADERS ${GOAP_HEADERS}
+        ${INCLUDE_DIR}/Config/GOAP/Config.h
         ${INCLUDE_DIR}/Config/GOAP/Array.h
         ${INCLUDE_DIR}/Config/GOAP/Vector.h
         ${INCLUDE_DIR}/Config/GOAP/IntrusivePtrBase.h
