--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set( GOAP_SOURCES
     ${SOURCE_DIR}/TaskRepeat.cpp
     ${SOURCE_DIR}/TaskScope.cpp
     ${SOURCE_DIR}/TaskSource.cpp
+    ${SOURCE_DIR}/TaskEvent.cpp
     ${SOURCE_DIR}/TaskSwitch.cpp
     ${SOURCE_DIR}/TaskWhile.cpp
     ${SOURCE_DIR}/TaskFor.cpp    
@@ -97,7 +98,8 @@ set( GOAP_HEADERS
     ${INCLUDE_DIR}/GOAP/TaskRepeat.h
     ${INCLUDE_DIR}/GOAP/TaskRaceNeck.h
     ${INCLUDE_DIR}/GOAP/TaskScope.h
-    ${INCLUDE_DIR}/GOAP/TaskSource.h
+    ${INCLUDE_DIR}/GOAP/TaskSource.h    
+    ${INCLUDE_DIR}/GOAP/TaskEvent.h
     ${INCLUDE_DIR}/GOAP/TaskSwitch.h
     ${INCLUDE_DIR}/GOAP/TaskWhile.h
     ${INCLUDE_DIR}/GOAP/TaskFor.h
