--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ MESSAGE("LIBGOAP_BUILD_TEST: ${LIBGOAP_BUILD_TEST}")
 MESSAGE("LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH: ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH}")
 
 IF(NOT LIBGOAP_EXTERNAL_BUILD)
-    set (CMAKE_CXX_STANDARD 17)
+    set(CMAKE_CXX_STANDARD 17)
+    
+    set(CMAKE_CXX_FLAGS "/W4 /EHsc")
     
     SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_GENERATOR})
     SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR})
@@ -81,7 +83,6 @@ set( GOAP_HEADERS
     ${INCLUDE_DIR}/GOAP/Chain.h
     ${INCLUDE_DIR}/GOAP/ChainInterface.h
     ${INCLUDE_DIR}/GOAP/ChainProvider.h
-    ${INCLUDE_DIR}/GOAP/Macros.h
     ${INCLUDE_DIR}/GOAP/Exception.h
     ${INCLUDE_DIR}/GOAP/Factorable.h
     ${INCLUDE_DIR}/GOAP/FunctionProvider.h
