--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,21 @@ MESSAGE("LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH: ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE
 IF(NOT LIBGOAP_EXTERNAL_BUILD)
     set(CMAKE_CXX_STANDARD 17)
     
-    set(CMAKE_CXX_FLAGS "/W4 /EHsc")
+    if(${CMAKE_C_COMPILER_ID} STREQUAL Clang)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+    elseif(${CMAKE_C_COMPILER_ID} STREQUAL AppleClang)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+    elseif(${CMAKE_C_COMPILER_ID} STREQUAL GNU)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+    elseif(${CMAKE_C_COMPILER_ID} STREQUAL Intel)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+    elseif(${CMAKE_C_COMPILER_ID} STREQUAL MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX /EHsc")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4710")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4738")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4820")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4711")
+    endif()
     
     SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_GENERATOR})
     SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR})
