--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,15 +18,15 @@ MESSAGE("LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH: ${LIBGOAP_EXTERNAL_CONFIG_INCLUDE
 IF(NOT LIBGOAP_EXTERNAL_BUILD)
     set(CMAKE_CXX_STANDARD 17)
     
-    if(${CMAKE_C_COMPILER_ID} STREQUAL Clang)
+    if(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
-    elseif(${CMAKE_C_COMPILER_ID} STREQUAL AppleClang)
+    elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL AppleClang)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
-    elseif(${CMAKE_C_COMPILER_ID} STREQUAL GNU)
+    elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
-    elseif(${CMAKE_C_COMPILER_ID} STREQUAL Intel)
+    elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL Intel)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
-    elseif(${CMAKE_C_COMPILER_ID} STREQUAL MSVC)
+    elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX /EHsc")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4710")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4738")
